--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
   </head>
   <body>
     <canvas id="gameCanvas"></canvas>
-    <script type="module" src="/src/main.ts"></script>
+    <script type="module" src="./dist/main.js"></script>
   </body>
 </html>
