--- a/editor.html
+++ b/editor.html
@@ -19,26 +19,35 @@
         background: black;
       }
 
-      #chrono {
+      #mode {
         position: absolute;
-        right: 0px;
+        left: 0px;
         top: 0px;
         color: white;
         background-color: black;
         padding: 10px;
-        font-size: 30px;
+        font-size: 20px;
         font-family: 'Courier New', Courier, monospace;
+      }
+
+      #panel {
+
+      }
+
+      #panel.hidden {
+        
       }
 
     </style>
   </head>
   <body>
-    <canvas id="gameCanvas"></canvas>
-    <div id="chrono">00:00.00</div>
-
+	  <canvas id="gameCanvas"></canvas>
+	  <div id="mode">default</div>
+    <div id="panel"></div>
 
     <script>
-      import("/src/main.ts").then(m => m.startGame());
+
+      import("/src/editor.ts").then(m => m.startEditor());
     </script>
   </body>
 </html>
