--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 
     <script>
-      import("/public/bundle.js").then(m => startGame());
+      import("/JumpyJump/public/bundle.js").then(m => startGame());
     </script>
   </body>
 </html>
