--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jumpy Jump</title>
     <style>
-      /* Le canvas prend tout l'écran et aucun scroll */
       body, html {
         margin: 0;
         padding: 0;
@@ -26,8 +25,57 @@
         color: white;
         background-color: black;
         padding: 10px;
-        font-size: 30px;
+        font-size: 3vmin;
         font-family: 'Courier New', Courier, monospace;
+      }
+
+
+      #mobileEntryContainer > * {
+        position: absolute;
+        width: 60px;
+        height: 60px;
+        background-color: #fff2;
+        border: 2px solid white;
+        color: white;
+      }
+
+      #mobileEntryContainer > *.high {
+        background-color: #fff4;
+      }
+
+      #mobileEntry-left {
+        left: 40px;
+        bottom: 40px;
+      }
+
+      #mobileEntry-right {
+        left: 110px;
+        bottom: 40px;
+      }
+
+      #mobileEntry-up {
+        right: 40px;
+        bottom: 110px;
+      }
+
+      #mobileEntry-down {
+        right: 40px;
+        bottom: 40px;
+      }
+
+      #mobileEntry-special {
+        left: 5px;
+        top: 5px;
+        width: auto;
+        height: auto;
+        font-size: 15px;
+        text-align: center;
+        font-family: 'Courier New', Courier, monospace;
+        border: 1px solid white;
+      }
+
+      .hidden {
+        display: none;
       }
 
     </style>
@@ -35,10 +83,35 @@
   <body>
     <canvas id="gameCanvas"></canvas>
     <div id="chrono">00:00.00</div>
+    <div id="mobileEntryContainer" class="hidden">
+      <div id="mobileEntry-left">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" role="img" class="icon">
+          <path d="M15 6 L9 12 L15 18" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" fill="none"/>
+        </svg>
+      </div>
+      <div id="mobileEntry-right">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" role="img" class="icon">
+          <path d="M9 6 L15 12 L9 18" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" fill="none"/>
+        </svg>
 
+      </div>
+      <div id="mobileEntry-up">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" role="img" class="icon">
+          <path d="M6 15 L12 9 L18 15" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" fill="none"/>
+        </svg>
+
+      </div>
+      <div id="mobileEntry-down">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" role="img" aria-label="Flèche bas" class="icon">
+          <path d="M6 9 L12 15 L18 9" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" fill="none"/>
+        </svg>
+
+      </div>
+      <div id="mobileEntry-special">SPECIAL</div>
+    </div>
 
     <script>
-      import("/JumpyJump/public/bundle.js").then(m => startGame());
+      import("/src/main.ts").then(m => m.startGame());
     </script>
   </body>
 </html>
