--- a/editor.html
+++ b/editor.html
@@ -47,7 +47,7 @@
 
     <script>
 
-      import("/JumpyJump/public/bundle.js").then(m => startEditor());
+      import("/JumpyJump/public/bundle.js").then(() => window.startEditor());
     </script>
   </body>
 </html>
