--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     </div>
 
     <script>
-      import("/JumpyJump/public/bundle.js").then(m => m.startGame());
+      import("/JumpyJump/public/bundle.js").then(() => window.startGame());
     </script>
   </body>
 </html>
