Save/Read level, Save/Read run, Fix editor

--- a/editor.html
+++ b/editor.html
@@ -47,7 +47,7 @@
 
     <script>
 
-      import("/src/editor.ts").then(m => m.startEditor());
+      import("/game/editor.ts").then(m => m.startEditor());
     </script>
   </body>
 </html>
