--- a/links.html
+++ b/links.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jumpy Jump</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Jumpy Jump</title>
 </head>
 <body>
-    <h1>Jumpy Jump</h1>
-    <h2>Select your mode</h2>
+	<h1>Jumpy Jump</h1>
+	<h2>Select your mode</h2>
 
-    <p>
-        <a href="/JumpyJump/index.html">Play Jumpy Jump</a>
-    </p>
+	<p>
+		<a href="/index.html">Play Jumpy Jump</a>
+	</p>
 
-    <p>
-        <a href="/JumpyJump/editor.html">Level editor</a>
-    </p>
+	<p>
+		<a href="/editor.html">Level editor</a>
+	</p>
+
+	<p>
+		<a href="/leaderboard.html">Leaderboard</a>
+	</p>
+
 </body>
 </html>
