--- a/links.html
+++ b/links.html
@@ -10,15 +10,15 @@
 	<h2>Select your mode</h2>
 
 	<p>
-		<a href="/index.html">Play Jumpy Jump</a>
+		<a href="/JumpyJump/index.html">Play Jumpy Jump</a>
 	</p>
 
 	<p>
-		<a href="/editor.html">Level editor</a>
+		<a href="/JumpyJump/editor.html">Level editor</a>
 	</p>
 
 	<p>
-		<a href="/leaderboard.html">Leaderboard</a>
+		<a href="/JumpyJump/leaderboard.html">Leaderboard</a>
 	</p>
 
 </body>
