--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 		<div id="fullyLoadLevels" class="hidden loadingIcon">Levels up to date!</div>
 		<div id="savingRun" class="hidden loadingIcon">Saving run</div>
 		<div id="sendingRun" class="hidden loadingIcon">Sending run</div>
+		<div id="fps"></div>
 
 		<script>
 			import("/JumpyJump/public/bundle.js").then(() => window.startGame());
