--- a/editor.html
+++ b/editor.html
@@ -46,7 +46,7 @@
     <div id="panel"></div>
 
     <script>
-
+			window.NETWORK_ADDRESS = null;
       import("/game/editor.ts").then(m => m.startEditor());
     </script>
   </body>
