Add link to the server

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 		<div id="fps"></div>
 
 		<script>
+			window.NETWORK_ADDRESS = "ws://jumpyjump-production-9b12.up.railway.app/";
 			import("/JumpyJump/public/bundle.js").then(() => window.startGame());
 		</script>
 	</body>
